--- a/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
+++ b/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -32,61 +32,68 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="TempButton" min="-2" pref="63" max="-2" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                      <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="1"/>
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="ExposureButton" min="-2" pref="105" max="-2" attributes="1"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                                  <Component id="GainLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="SpeedLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="FrameTransferLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="TriggerLabel" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
-              </Group>
-              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="SpeedComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="50" pref="50" max="50" attributes="0"/>
-                      <Component id="EMGainSlider" min="-2" pref="180" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="TriggerComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                  <Component id="ModeComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                  <Component id="GainComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                  <Component id="EMCheckBox" min="-2" max="-2" attributes="0"/>
-                  <Component id="EMGainTextField" min="-2" pref="49" max="-2" attributes="0"/>
-                  <Component id="FrameTransferComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                  <Component id="BinningComboBox" min="-2" pref="80" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="ExposureTextField" min="-2" pref="70" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="ROISetButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="8" pref="8" max="8" attributes="0"/>
-                              <Component id="ROIUnsetButton" min="-2" max="-2" attributes="0"/>
+                          <Component id="TempButton" min="-2" pref="63" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                              <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="1"/>
+                              <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                  <Component id="ExposureButton" alignment="0" min="-2" pref="105" max="-2" attributes="1"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                                          <Component id="GainLabel" min="-2" max="-2" attributes="0"/>
+                                          <Component id="SpeedLabel" min="-2" max="-2" attributes="0"/>
+                                          <Component id="FrameTransferLabel" min="-2" max="-2" attributes="0"/>
+                                          <Component id="TriggerLabel" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="SpeedComboBox" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="50" pref="50" max="50" attributes="0"/>
+                              <Component id="EMGainSlider" min="-2" pref="180" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="TriggerComboBox" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Component id="ModeComboBox" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Component id="GainComboBox" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Component id="EMCheckBox" min="-2" max="-2" attributes="0"/>
+                          <Component id="EMGainTextField" min="-2" pref="49" max="-2" attributes="0"/>
+                          <Component id="FrameTransferComboBox" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Component id="BinningComboBox" min="-2" pref="80" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="ExposureTextField" min="-2" pref="70" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="ROISetButton" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="8" pref="8" max="8" attributes="0"/>
+                                      <Component id="ROIUnsetButton" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
+                          <Component id="CameraSelectComboBox" min="-2" pref="191" max="-2" attributes="0"/>
+                          <Component id="TempLabel" alignment="0" min="-2" pref="202" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <Component id="CameraSelectComboBox" min="-2" pref="191" max="-2" attributes="0"/>
-                  <Component id="TempLabel" alignment="0" min="-2" pref="202" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                      <Component id="SnapButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                      <Component id="LiveButton" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -167,7 +174,12 @@
                   <Component id="TempButton" alignment="3" min="-2" pref="17" max="-2" attributes="0"/>
                   <Component id="TempLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="SnapButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LiveButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="13" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -475,6 +487,25 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExposureButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="SnapButton">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Snap"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SnapButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="LiveButton">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Live"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
